@@ -41,6 +41,17 @@
 #undef Tcl_CreateHashEntry
 #undef Tcl_Panic
 
+/* Only provided in the stub table for backwards
+ * binary compatibility.
+ */
+#define TclFSGetNativePath getnativepath
+static const char *
+getnativepath(
+    Tcl_Obj *pathPtr)
+{
+    return Tcl_FSGetNativePath(pathPtr);
+}
+
 /*
  * WARNING: The contents of this file is automatically generated by the
  * tools/genStubs.tcl script. Any modifications to the function declarations
@@ -963,7 +974,7 @@ const TclStubs tclStubs = {
     Tcl_FSGetTranslatedPath, /* 466 */
     Tcl_FSEvalFile, /* 467 */
     Tcl_FSNewNativePath, /* 468 */
-    Tcl_FSGetNativePath, /* 469 */
+    TclFSGetNativePath, /* 469 */
     Tcl_FSFileSystemInfo, /* 470 */
     Tcl_FSPathSeparator, /* 471 */
     Tcl_FSListVolumes, /* 472 */
@@ -1124,6 +1135,7 @@ const TclStubs tclStubs = {
     Tcl_LoadFile, /* 627 */
     Tcl_FindSymbol, /* 628 */
     Tcl_FSUnloadFile, /* 629 */
+    Tcl_FSGetNativePath, /* 630 */
 };
 
 /* !END!: Do not edit above this line. */
